fixes to index.js on mobile

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -106,10 +106,12 @@
 
   #contents {
     flex-direction: column;
+    padding-bottom: 0;
   }
 
   .contents-col {
     width: 100%;
+    margin-bottom: 30px;
   }
 
   .mobile-content-show {
@@ -118,5 +120,9 @@
 
   .mobile-content-hide {
     display: none;
+  }
+
+  footer {
+    padding-bottom: 15px !important;
   }
 }
